--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "bower": "~1.1.2",
     "express": "~3.3.5",
     "hbs": "~2.3.1",
-    "lodash": "~1.3.1"
+    "lodash": "~1.3.1",
+    "crawlable": ">=0.4.0"
   }
 }
