--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "crawlable-todos",
-  "version": "0.0.1",
-  "dependencies": {
-    "bower": "~1.1.2",
-    "express": "~3.3.5",
-    "hbs": "~2.3.1",
-    "lodash": "~1.3.1",
-    "crawlable": ">=0.4.0"
-  }
+    "name": "crawlable-todos",
+    "version": "0.0.1",
+    "dependencies": {
+        "bower": "~1.1.2",
+        "express": "~3.3.5",
+        "hbs": "~2.3.1",
+        "lodash": "~1.3.1",
+        "crawlable": ">=0.4.0"
+    },
+    "engines": {
+        "node": "0.10.17"
+    }
 }
