install on heroku

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "crawlable": ">=0.4.0"
     },
     "engines": {
-        "node": ">=0.10.15"
-	"npm": "1.3.4"
+        "node": "0.10.13",
+        "npm": "1.3.4"
     }
 }
