--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "engines": {
         "node": "0.10.13",
         "npm": "1.3.4"
+    },
+    "scripts": {
+    	"install": "cd public && rm -rf bower_components && ../node_modules/bower/bin/bower --allow-root install"
     }
 }
