--- a/public/bower.json
+++ b/public/bower.json
@@ -10,7 +10,7 @@
         "backbone.babysitter": "~0.0.6",
         "marionette": "~1.0.3",
         "bootstrap": "https://github.com/bowerjs/bootstrap.git",
-        "solidify": "git@github.com:trupin/solidify.git",
-        "crawlable": "git@github.com:trupin/crawlable.git"
+        "solidify": "git@github.com:trupin/solidify.git#*",
+        "crawlable": "git@github.com:trupin/crawlable.git#*"
     }
 }
