--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
         "npm": "1.3.4"
     },
     "scripts": {
-    	"install": "cd public && rm -rf bower_components && ../node_modules/bower/bin/bower --allow-root install"
+    	"install": "./install.sh"
     }
 }
